# CADDreamer

./: README.md  requirements.txt  setup.sh  test_mvdiffusion_seq.py  test_real_images.py  test_syne_images_stage_2_segmentation.py  test_syne_images_stage_3_generate_step.py
automl/: AutoencoderKL.py
cached_output/cropsize-256-cfg1.0-syne/0_0deepcad/: first_log.txt  result.step
cached_output/cropsize-256-cfg1.0/0_0deepcad/: result.step
cached_output/cropsize-256-cfg1.0/1_0deepcad/: result.step
cached_output/cropsize-256-cfg1.0/2_0deepcad/: result.step
configs/train/: testing_4090_stage_1_cad_6views-lvis.yaml
instant_nsr_pl/: launch.py
instant_nsr_pl/datasets/: ortho.py
instant_nsr_pl/systems/: base.py  neus_ortho.py
mvdiffusion/data/: objaverse_dataset.py  objaverse_dataset_vae.py  single_image_dataset.py
mvdiffusion/pipelines/: pipeline_mvdiffusion_image.py
neus/: fit_and_intersection.py  get_segmentation_result.py  intersectionocc.py  intersectiontrace.py  launch.py
neus/configs/: neuralangelo-ortho-wmask-edge.yaml  neuralangelo-ortho-wmask.yaml
neus/datasets/: blender.py  ortho.py  palettes.py  render_polyscope.py
neus/fit_surfaces/: fitting_one_surface.py  fitting_utils.py  intersection.py  io_utils.py  primitive_forward.py  primitive_utils.py
neus/models/: geometry.py  nerf.py  network_utils.py  neus.py  texture.py  utils.py
neus/newton/: Cone.py  Cylinder.py  FreeCADGeo2NewtonGeo.py  Plane.py  Sphere.py  Torus.py  __init__.py  constants.py  convert.py  create_voxelize_primitives.py  newton_method.py  newton_primitives.py  optimize.py  process.py
neus/systems/: base.py  neus.py  neus_ortho.py
neus/utils/: cadrender.py  mixins.py  pc_utils.py  render_poly_seg_point_group.py  show.py  translate_convert.py  util.py  vedo_util.py  visualization.py
pyransac/: CMakeLists.txt  build.sh  generate_points.cpp  test.py  test_data_for_pyransac.pth
pyransac/new_cmake-build-release/: CMakeCache.txt  cmake_install.cmake
pyransac/primitives/: Cone.cpp  ConePrimitiveShape.h  ConePrimitiveShapeConstructor.cpp  RansacShapeDetector.cpp  main.cpp
utils/: graphcut.py  logger.py  util.py  visual.py  visualization.py  write.py
